--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
+    "mysql2": "^3.10.1",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -55,6 +56,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.26",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
