--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^10.12.3",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -55,7 +56,6 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/mysql": "^2.15.26",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
